# paper-scout

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
interest_profile/: seed.json
scripts/: run_once.py  seed_profile.py
src/mcp_server/: server.py
src/paper_scout/: config.py  db.py  models.py  pipeline.py  scheduler.py
src/paper_scout/scoring/: embeddings.py  signals.py
src/paper_scout/sources/: arxiv.py  hf_papers.py  semantic_scholar.py
